fixed issue with flex and gap css properties causing alignment issues in list-item and item-list-header

--- a/front-end/src/app/core/components/item-list-header/item-list-header.component.css
+++ b/front-end/src/app/core/components/item-list-header/item-list-header.component.css
@@ -4,7 +4,6 @@
     padding: 1rem 0 1rem 0;
     border-bottom: 1px solid var(--offwhite);
     font-weight: 700;
-    gap: 1rem;
 }
 
 .btn-heading {
@@ -15,4 +14,5 @@ span {
     flex: 2;
     overflow: hidden;
     text-overflow: ellipsis;
+    padding-right: 1rem;
 }
