--- a/front-end/src/app/core/components/list-item/list-item.component.css
+++ b/front-end/src/app/core/components/list-item/list-item.component.css
@@ -4,14 +4,11 @@
     position: relative;
     align-items: stretch;
     min-height: 5rem;
-    justify-content: center;
 }
 
 .list-item-info {
     width: 100%;
     display: flex;
-    align-items: enter;
-    gap: 1rem;
 }
 
 .remove-btn {
@@ -33,4 +30,5 @@ span {
     text-overflow: ellipsis;
     flex: 2;
     align-self: center;
+    padding-right: 1rem;
 }
